compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_function_names.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1036
expression: "fn dupe() { 1 }\nfn dupe() { 2 }"
snapshot_kind: text
---
----- SOURCE CODE
fn dupe() { 1 }
fn dupe() { 2 }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:2:1
  │
1 │ fn dupe() { 1 }
  │ --------- First defined here
2 │ fn dupe() { 2 }
  │ ^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
